nova imagem chu

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8" />
-    <title>BlackCodeBrasil</title>
+    <title>QUALITYCOACH</title>
     <link href="css/style.css" type="text/css" rel="stylesheet" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
@@ -10,8 +10,8 @@
 	<div id="content">
 		<header id="main-header">
 			<div id="main-header-text">
-			  <h1>BlackCodeBrasil</h1>
-			  <p>Diversidade + Software = <i class="fa fa-heart"></i></p>
+			  <h1>QualityCoach</h1>
+			  <p>Treino + Qualidade = <i class="fa fa-heart"></i></p>
 			  <br><br>
 			  <a href="#external-links">Quero participar!</a>
 			</div>
@@ -43,15 +43,15 @@
 
 			<section id="sobre">
 				<h1>Sobre</h1>
-				<p>Somos desenvolvedores de software e queremos incentivar a inserção de pessoas negras na área. Por isso criamos uma comunidade que busca valorizar a diversidade e aumentar nossas habilidade através da troca de conhecimento e, assim, progredir em nossas carreiras profissionais.</p>
+				<p>Somos profissionais...</p>
 				<p>Você que está iniciando ou que já tem experiência, junte-se a nós para fortalecermos a comunidade.</p>
 				<p>Sejam bem vindos!</p>
 			</section>
 		</main>
 
 		<footer>
-			<span>BlackCodeBrasil</span>
-			<span>blkcodebrasil@gmail.com</span>
+			<span>Quality Coach</span>
+			<span>qualitycoach@gmail.com</span>
 		</footer>
 	</div>
 </body>
