css - icon whatsapp

--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
 		<main>
 			<section id="external-links">
 				<div class="social">
-					<a href="https://github.com/blackcodebrasil" target="_blank">
+					<a href="https://github.com/qualitycoach" target="_blank">
 					    <img src="img/icons/icon-github.svg" alt="Logotipo Github" />
 					    <p>Visite nossos projetos no Github!</p>
 				    </a>
 				</div>
 
 				<div class="social">
-					<a href="https://instagram.com/blackcodebrasil/" target="_blank">
+					<a href="https://instagram.com/qualitycoach/" target="_blank">
 					    <img src="img/icons/icon-instagram.svg" alt="Logotipo Instagram" />
 					    <p>Visite nosso Instagram para dicas e inspiração.</p>
 				    </a>
 				</div>
 
 				<div class="social">
-					<a href="https://discord.gg/HfnbV2ck8B" target="_blank">
-					    <img src="img/icons/icon-discord.svg" alt="Logotipo Discord" />
+					<a href="wa.me/message/ZU3IIFTHFVAFC1" target="_blank">
+					    <img src="img/icons/icon-whatsapp.svg" alt="Logotipo Whatsapp" />
 					    <p>Conheça nossa comunidade no Discord!</p>
 				    </a>
 				</div>
