--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class="social">
 					<a href="wa.me/message/ZU3IIFTHFVAFC1" target="_blank">
 					    <img src="img/icons/icon-whatsapp.svg" alt="Logotipo Whatsapp" />
-					    <p>Conheça nossa comunidade no Discord!</p>
+					    <p>Entre em contato conosco</p>
 				    </a>
 				</div>
 			</section>
