--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</div>
 
 				<div class="social">
-					<a href="wa.me/message/ZU3IIFTHFVAFC1" target="_blank">
+					<a href="https://api.whatsapp.com/message/ZU3IIFTHFVAFC1?autoload=1&app_absent=0" target="_blank">
 					    <img src="img/icons/icon-whatsapp.svg" alt="Logotipo Whatsapp" />
 					    <p>Entre em contato conosco</p>
 				    </a>
