chore(index) - cabecalho

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8" />
-    <title>QUALITYCOACH</title>
+    <title>Quality Coach</title>
     <link href="css/style.css" type="text/css" rel="stylesheet" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
@@ -10,7 +10,7 @@
 	<div id="content">
 		<header id="main-header">
 			<div id="main-header-text">
-			  <h1>QualityCoach</h1>
+			  <h1>Quality Coach</h1>
 			  <p>Treino + Qualidade = <i class="fa fa-heart"></i></p>
 			  <br><br>
 			  <a href="#external-links">Quero participar!</a>
